manifests/minio/overlay-tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  template:
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
            - --certs-dir
            - /.minio/certs
          name: minio
          volumeMounts:
            - mountPath: /.minio/certs
              name: minio-certs
            - mountPath: /.minio/certs/CAs
              name: cabundle
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: service-ca.crt
                path: public.crt
            name: config-service-cabundle
          name: cabundle
        - name: minio-certs
          secret:
            defaultMode: 420
            items:
              - key: tls.crt
                path: public.crt
              - key: tls.key
                path: private.key
            secretName: minio-certs
