manifests/minio/overlay-tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: minio-certs
