manifests/minio/overlay-tls/route-console.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-console
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: console
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
