manifests/minio/overlay-tls/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
spec:
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
